<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DocumentActivity">
    <group android:id="@+id/group_normal_mode">
        <item android:id="@+id/action_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/search"
            app:showAsAction="ifRoom|withText"/>
        <item android:id="@+id/action_add"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/add"
            app:showAsAction="ifRoom"/>
        <item android:id="@+id/action_start_delete_mode"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/start_manage"
            app:showAsAction="ifRoom"/>
    </group>
    <group android:id="@+id/group_delete_mode">
        <item android:id="@+id/action_sync"
            android:icon="@drawable/ic_cloud_sync"
            android:title="@string/sync"
            app:showAsAction="ifRoom|withText"/>
        <item android:id="@+id/action_end_delete_mode"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/delete"
            app:showAsAction="always"/>
        <item android:id="@+id/action_cancel_delete_mode"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/delete"
            app:showAsAction="always"/>
    </group>
</menu>