<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wave.fileuploadservice.MainActivity">


    <ImageView
        android:id="@+id/ivDisplayImage"
        android:layout_width="131dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvSelectedFilePath"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/photo" />

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="112dp"
        android:background="@color/colorAccent"
        android:text="@string/Upload"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectedFilePath"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonRemove"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="112dp"
        android:background="@color/colorAccentUpload"
        android:text="@string/Reset"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSelectedFilePath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:hint="@string/Select_files"
        android:textColor="#161616"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRemove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDisplayImage" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvSelectedFilePath"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pencil" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/File_Uploading_Service"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvResult"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Result"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpload"
        app:layout_constraintVertical_bias="0.828" />

    <Switch
        android:id="@+id/switchAuto"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="44dp"
        android:text="@string/Auto_upload_Camera_folder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>